--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body{
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 10%);
     margin: 0;
     font-family: 'Noto Sans SC', sans-serif;
     background-color: black;
-    background: url(fondo.jpg);
+    background: url(CommuniTraders-Gradient.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -51,6 +51,12 @@ nav .links a{
     margin-top: 10%;
 }
 
+.logo-white img{
+    width: 100%;
+    max-width: 300px;
+    margin: auto;
+    margin-top: 10%;
+}
 section{
     width: 90%;
     margin: auto;
@@ -59,7 +65,7 @@ section{
 }
 
 section h3{
-    color: white;
+    color: #43586b;
     font-size: 33px;
     font-weight: 400;
     margin: 0;
@@ -67,11 +73,11 @@ section h3{
 }
 
 section h1{
-    color: white;
+    color: #43586b;
     font-size: 75px;
     font-weight: 800;
     margin-top: 0px;
-    text-shadow: 0px 11px 11px #00000061;
+    /* text-shadow: 0px 11px 11px #00000061; */
 }
 
 section .btns{
